# AdBoxstra

./: .gitignore  README.md  adboxtra_data_flow_diagram_2022  main.py  package.xml  packet_handler.py  packet_types_enum.py  process_packet.py  setup.cfg  setup.py  tcp_handler.py
ad_boxtra/: conversationalist.py  drive_control_serial.py  turtle_ad_boxtra.py
ex_arca/: turtle_ex_arca.py
launch/: drive_control.launch.py  launch_drive_control.py  my_robot_webots.launch.py
legacy-ros2-code/launch/: drive_control.launch.py
resource/: my_robot.urdf
urdf/: README.md
urdf/ad_boxtra/: README.md  Rover'22.csv  Rover'22.urdf  Rover_2022.csv  Rover_2022.proto  Rover_2022.urdf
urdf/rover_5/: rover_5.urdf
urdf/webots_simulation/protos/: .rover_5.cache
urdf/webots_simulation/worlds/: .webots_simulation.wbproj  webots_simulation.wbt
webots_simulation/controllers/arm_sweep/: arm_sweep.py
webots_simulation/controllers/epuck_avoid_collision/: epuck_avoid_collision.py
webots_simulation/controllers/epuck_go_forward/: epuck_go_forward.py
webots_simulation/controllers/four_wheeled_collision_avoidance/: four_wheeled_collision_avoidance.py
webots_simulation/protos/: .Rover_2022.cache  .rover_5_2022.cache  AdBoxtraSimplified.proto  FourWheeledBot.proto  Rover_2022.proto  Rover_2022.proto.backup  rover_5_2022.proto
webots_simulation/worlds/: .adboxtra_2022.wbproj  .adboxtra_2022_simplified.wbproj  .webots_simulation.wbproj  adboxtra_2022.wbt  adboxtra_2022_simplified.wbt  adboxtra_outreach_demo.wbt  rover5_2021_legacy.wbt  webots_simulation.wbt
