<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ex_arca</name>
  <version>0.1.0</version>
  <description>ROS 2 Package to drive the NIU Mars Rover Team's Ex Arca platform.</description>
  <maintainer email="niurover@gmail.com">niurover</maintainer>
  <license>MIT License</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>teleop_tools</exec_depend>
  <exec_depend>joy_linux</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
